--- a/Eva_3_Backend_Daylan_Deyner-main/viejo_oeste/personajes/Templates/index.html
+++ b/Eva_3_Backend_Daylan_Deyner-main/viejo_oeste/personajes/Templates/index.html
@@ -79,6 +79,10 @@
                 <a href="/arma" class="btn btn-western" id="arma">Armas</a>
                 <img src="{% static 'images/arma.png' %}" class="btn-image" id="arma_t" onclick="location.href='/arma/'">
             </div>
+            <div class="button-item">
+                <a href="/api" class="btn btn-western" id="arma">API</a>
+                <img src="{% static 'images/api.png' %}" class="btn-image" id="arma_t" onclick="location.href='/api/'">
+            </div>
         </div>
     </div>
     
